JEDIT 4.0 VERSION HISTORY

* Version 4.0pre4

+ New Features

- Two JDK 1.4-specific options added to 'Appearance' option pane:
  'Draw window borders using Swing look & feel', 'Draw dialog box
  borders using Swing look & feel'. By default, the former is disabled,
  the latter is enabled.

+ Enhancements

- Firewall plugin integrated into editor core
- Global Options dialog box now has an 'Overview' page
- Better GZIP file auto-detection; previously, jEdit would check for a
  filename extension of .gz, now it checks for the GZIP magic number at
  the start of the file
- Unicode files are now automatically detected as being such, and opened
  with the Unicode encoding
- 'Narrow to Fold' on a collapsed fold now automatically expands the
  fold
- The complete word changes started in 4.0pre3 are now complete.
  - UP/DOWN arrow keys wrap selection around in complete word list
  - Keywords are now completed (and shown in the list in a bold font)
  - The popup is updated on the fly if you type or press BACKSPACE while
    it is showing
- In the file system browser, trying to add a file to the favorites now
  adds that file's directory to the favorites, instead of showing an
  error message
- The edit server now un-iconifies the view, if necessary
- Updated ML mode (Ingmar Stein)
- Printing code rewritten to use Java 2 print API. The only user-visible
  change is that the printed output is now word-wrapped.

+ Bug Fixes

- Next-fold command was slightly broken
- Fixed possible plugin manager NPE when installing incompatible plugins
- On some Java versions, the plugin manager's progress windows would
  hang until explicitly given focus
- Minor fix for S+HOME/S+END behavior
- Fixed for weird caret position after control-clicking a closing
  bracket
- The position of the wrap guide is now determined using the Java2D API,
  so it should be correct now. Previously, it could be drawn in the
  wrong place if anti-aliasing was enabled